--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.21.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
